--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "3.6"
 install: "pip install -r requirements.txt"
+env:
+  - HOST=localhost
 before_script:
-- cd tests
+  - cd tests
 script: behave
