--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 install: "pip install -r requirements.txt"
 env:
-  - HOST=localhost
+  - FLASK_ENV = 'Local,Travis'
 before_script:
   - (gunicorn project:app &)
   - cd tests
