--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ env:
   - FLASK_ENV = 'Local,Testing,Gunicorn'
 before_script:
   - (gunicorn project:app &)
-  - cd tests/platform
+  - cd tests
 script: behave
