Simplify environments. Only allow app start with Gunicorn.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 install: "pip install -r requirements.txt"
 env:
-  - FLASK_ENV = 'Local,Testing,Gunicorn'
+  - FLASK_ENV = 'Testing'
 before_script:
   - (gunicorn project:app &)
   - cd tests
